--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,9 @@
 
 	<title>Title</title>
 	<meta name="description" content="">
-
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700,700i,800&amp;subset=cyrillic"
-				rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-	<!--	<link rel="stylesheet" href="css/slick.css">-->
-	<!--	<link rel="stylesheet" href="css/jquery.fancybox.css">-->
-<!--	<link rel="stylesheet" href="fonts/stylesheet.css">-->
+	<link rel="stylesheet" href="bootstrapGrid.css">
 	<link rel="stylesheet" href="main.sass">
 
 </head>
@@ -106,7 +99,7 @@
 </footer>
 <!-- // -->
 
-<script src="../js/scripts.min.js"></script>
+<script src="./index.js"></script>
 
 </body>
 </html>
