--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,13 @@
 <html lang="ru">
 <head>
 	<meta charset="utf-8">
-
+	<title>Title</title>
 	<title>Title</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 	<link rel="stylesheet" href="bootstrapGrid.css">
 	<link rel="stylesheet" href="main.sass">
-
 </head>
 <body>
 <!-- header -->
