--- a/src/index.html
+++ b/src/index.html
@@ -6,182 +6,172 @@
 	<title>Title</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="bootstrapGrid.css">
 	<link rel="stylesheet" href="main.sass">
 </head>
 <body>
-<!-- header -->
 
+<!-- header -->
 <header class="header">
 	<div class="container">
-		<div class="header-top">
+			<a class="header__logo logo" href="#"><p><span>d</span>sichkar</p><span>.code</span></a>
 
-			<div class="header-top__wrap">
-
-				<div class="header-top__logo">
-					<p><span>d</span>sichkar</p>
-					<span>code</span>
-				</div>
-
-			</div>
-
-		</div>
-		<div class="header-image">
-<!--			<img src="../img/lego-icon.png" alt="">-->
+		<div class="header__image header-image">
+			<img src="../img/ava.jpg" alt="">
 		</div>
 
-		<div class="pages-title">
-			<div class="pages-title__wrap">
-				<div class="pages-title__title">
-					<h1>Hi my name is Dima.</h1>
-					<p> - some of my works are collected here</p>
+		<div class="header-content">
+				<div class="header-content__wrap">
+					<h1 class="header-content__title page-title">Hi my name is Dima.</h1>
+					<p class="header-content__subtile page-subtitle"> - some of my works are collected here</p>
 				</div>
 
-
-				<div class="pages-title__links">
-					<span>Find us online</span>
-					<ul>
-						<li><a href="#"><img src="../img/1-icon.png" alt="img"></a></li>
-						<li><a href="#"><img src="../img/g-icon.png" alt="img"></a></li>
-						<li><a href="#"><img src="../img/2-icon.png" alt="img"></a></li>
-						<li><a href="#"><img src="../img/3-icon.png" alt="img"></a></li>
+					<ul class="header-content__links contact-links">
+							<li class="contact-links__item">
+								<a class="contact-links__link" href="tg://resolve?domain=@kardsich">
+									<img class="contact-links__link-icon" src="../img/tg-icon.svg" alt="img">
+								</a>
+							</li>
+							<li class="contact-links__item">
+								<a class="contact-links__link" href="mailto:sichkardimitri@gmail.com">
+									<img class="contact-links__link-icon" src="../img/gmail.svg" alt="img">
+								</a>
+							</li>
 					</ul>
-				</div>
-			</div>
-
 		</div>
+
 	</div>
 </header>
 <!-- // -->
 <main class="main">
 	<section class="section-work">
 		<div class="container">
-			<h2>/ My works /</h2>
+			<h2 class="section-work__title section-title">/ My works /</h2>
 
 			<ul class="section-work__list">
 				<li class="section-work__list-item">
-					<a href="https://dmitrisi4.github.io/dmitrisi4/work/kns/">sp-zakaz</a>
+					<a target="_blank" href="https://dmitrisi4.github.io/dmitrisi4/work/kns/">sp-zakaz</a>
 				</li>
 
 				<li class="section-work__list-item">
-					<a href="https://dmitrisi4.github.io/dmitrisi4/work/Hochupodarit/index.html">Hochupodarit</a>
+					<a target="_blank" href="https://dmitrisi4.github.io/dmitrisi4/work/Hochupodarit/index.html">Hochupodarit</a>
 				</li>
 
 				<li class="section-work__list-item">
-					<a href="https://dmitrisi4.github.io/dmitrisi4/work/miband/">miband</a>
+					<a target="_blank" href="https://dmitrisi4.github.io/dmitrisi4/work/miband/">miband</a>
 				</li>
 
 				<li class="section-work__list-item">
-					<a href="https://dmitrisi4.github.io/dmitrisi4/work/PaySale/index.html">PaySale</a>
+					<a target="_blank" href="https://dmitrisi4.github.io/dmitrisi4/work/PaySale/index.html">PaySale</a>
 				</li>
 
 				<li class="section-work__list-item">
-					<a href="https://dmitrisi4.github.io/dmitrisi4/work/SA/index.html">SA (АРЕНДА СТОМАТОЛОГИЧЕСКОГО ОБОРУДОВАНИЯ)</a>
+					<a target="_blank" href="https://dmitrisi4.github.io/dmitrisi4/work/SA/index.html" title="АРЕНДА СТОМАТОЛОГИЧЕСКОГО ОБОРУДОВАНИЯ">SA</a>
 				</li>
 
 				<li class="section-work__list-item">
-					<a href="https://dmitrisi4.github.io/dmitrisi4/work/beeline/index.html">UMobile/Beeline </a>
+					<a target="_blank" href="https://dmitrisi4.github.io/dmitrisi4/work/beeline/index.html">UMobile/Beeline </a>
 				</li>
 
 				<li class="section-work__list-item">
-					<a href="https://dmitrisi4.github.io/dmitrisi4/work/bitovki/index.html">Bitovki.rf</a>
+					<a target="_blank" href="https://dmitrisi4.github.io/dmitrisi4/work/bitovki/index.html">Bitovki.rf</a>
 				</li>
 
 				<li class="section-work__list-item">
-					<a href="https://dmitrisi4.github.io/dmitrisi4/work/cruisesales/index.html">Cruise Sales</a>
+					<a target="_blank" href="https://dmitrisi4.github.io/dmitrisi4/work/cruisesales/index.html">Cruise Sales</a>
 				</li>
 
 				<li class="section-work__list-item">
-					<a href="https://dmitrisi4.github.io/dmitrisi4/work/dent/index.html">Implant</a>
+					<a target="_blank" href="https://dmitrisi4.github.io/dmitrisi4/work/dent/index.html">Implant</a>
 				</li>
 
 				<li class="section-work__list-item">
-					<a href="https://dmitrisi4.github.io/dmitrisi4/work/dozor/index.html">Dozor</a>
+					<a target="_blank" href="https://dmitrisi4.github.io/dmitrisi4/work/dozor/index.html">Dozor</a>
 				</li>
 
 				<li class="section-work__list-item">
-					<a href="https://dmitrisi4.github.io/dmitrisi4/work/formac/index.html">Fomac</a>
+					<a target="_blank" href="https://dmitrisi4.github.io/dmitrisi4/work/formac/index.html">Fomac</a>
 				</li>
 
 				<li class="section-work__list-item">
-					<a href="https://dmitrisi4.github.io/dmitrisi4/work/gorod/index.html">Gorod</a>
+					<a target="_blank" href="https://dmitrisi4.github.io/dmitrisi4/work/gorod/index.html">Gorod</a>
 				</li>
 
 				<li class="section-work__list-item">
-					<a href="https://dmitrisi4.github.io/dmitrisi4/work/housingservices/index.html">Housing services</a>
+					<a target="_blank" href="https://dmitrisi4.github.io/dmitrisi4/work/housingservices/index.html">Housing services</a>
 				</li>
 
 				<li class="section-work__list-item">
-					<a href="https://dmitrisi4.github.io/dmitrisi4/work/im/index.html">shop online</a>
+					<a target="_blank" href="https://dmitrisi4.github.io/dmitrisi4/work/im/index.html">shop online</a>
 				</li>
 
 				<li class="section-work__list-item">
-					<a href="https://dmitrisi4.github.io/dmitrisi4/work/lemuria/index.html">Lemuria</a>
+					<a target="_blank" href="https://dmitrisi4.github.io/dmitrisi4/work/lemuria/index.html">Lemuria</a>
 				</li>
 
 				<li class="section-work__list-item">
-					<a href="https://dmitrisi4.github.io/dmitrisi4/work/micromonstr/index.html">Micromonstr</a>
+					<a target="_blank" href="https://dmitrisi4.github.io/dmitrisi4/work/micromonstr/index.html">Micromonstr</a>
 				</li>
 
 				<li class="section-work__list-item">
-					<a href="https://dmitrisi4.github.io/dmitrisi4/work/moroshka/index.html">Moroshka</a>
+					<a target="_blank" href="https://dmitrisi4.github.io/dmitrisi4/work/moroshka/index.html">Moroshka</a>
 				</li>
 
 				<li class="section-work__list-item">
-					<a href="https://dmitrisi4.github.io/dmitrisi4/work/npo/index.html">Npo</a>
+					<a target="_blank" href="https://dmitrisi4.github.io/dmitrisi4/work/npo/index.html">Npo</a>
 				</li>
 
 				<li class="section-work__list-item">
-					<a href="https://dmitrisi4.github.io/dmitrisi4/work/po/app/index.html">RusBitTech</a>
+					<a target="_blank" href="https://dmitrisi4.github.io/dmitrisi4/work/po/app/index.html">RusBitTech</a>
 				</li>
 
 				<li class="section-work__list-item">
-					<a href="https://dmitrisi4.github.io/dmitrisi4/work/sport-connect/index.html">Sport Connect</a>
+					<a target="_blank" href="https://dmitrisi4.github.io/dmitrisi4/work/sport-connect/index.html">Sport Connect</a>
 				</li>
 
 				<li class="section-work__list-item">
-					<a href="https://dmitrisi4.github.io/dmitrisi4/work/watch2/index.html">Watch 2</a>
+					<a target="_blank" href="https://dmitrisi4.github.io/dmitrisi4/work/watch2/index.html">Watch 2</a>
 				</li>
 
 				<li class="section-work__list-item">
-					<a href="https://dmitrisi4.github.io/dmitrisi4/work/septik2/dist/">Septik</a>
+					<a target="_blank" href="https://dmitrisi4.github.io/dmitrisi4/work/septik2/dist/">Septik</a>
 				</li>
 
 				<li class="section-work__list-item">
-					<a href="https://dmitrisi4.github.io/dmitrisi4/work/carreraa/">Carrera Jeans</a>
+					<a target="_blank" href="https://dmitrisi4.github.io/dmitrisi4/work/carreraa/">Carrera Jeans</a>
 				</li>
 
 				<li class="section-work__list-item">
-					<a href="https://dmitrisi4.github.io/dmitrisi4/work/hrompro/">Chrom Pro</a>
+					<a target="_blank" href="https://dmitrisi4.github.io/dmitrisi4/work/hrompro/">Hrom Pro</a>
 				</li>
 
 				<li class="section-work__list-item">
-					<a href="https://dmitrisi4.github.io/dmitrisi4/work/itherm/">iTherm</a>
+					<a target="_blank" href="https://dmitrisi4.github.io/dmitrisi4/work/itherm/">iTherm</a>
 				</li>
 
 				<li class="section-work__list-item">
-					<a href="https://dmitrisi4.github.io/dmitrisi4/work/nst/">nst</a>
+					<a target="_blank" href="https://dmitrisi4.github.io/dmitrisi4/work/nst/">nst</a>
 				</li>
 
 				<li class="section-work__list-item">
-					<a href="https://dmitrisi4.github.io/dmitrisi4/work/remont/">remont</a>
+					<a target="_blank" href="https://dmitrisi4.github.io/dmitrisi4/work/remont/">remont</a>
 				</li>
 
 				<li class="section-work__list-item">
-					<a href="https://dmitrisi4.github.io/dmitrisi4/work/scoin/">scoin</a>
+					<a target="_blank" href="https://dmitrisi4.github.io/dmitrisi4/work/scoin/">scoin</a>
 				</li>
 
 				<li class="section-work__list-item">
-					<a href="https://dmitrisi4.github.io/dmitrisi4/work/symanitron/">symanitron</a>
+					<a target="_blank" href="https://dmitrisi4.github.io/dmitrisi4/work/symanitron/">symanitron</a>
 				</li>
 
 				<li class="section-work__list-item">
-					<a href="https://dmitrisi4.github.io/dmitrisi4/work/tonirovka/">tonirovka.rf</a>
+					<a target="_blank" href="https://dmitrisi4.github.io/dmitrisi4/work/tonirovka/">tonirovka.rf</a>
 				</li>
 
 				<li class="section-work__list-item">
-					<a href="https://dmitrisi4.github.io/dmitrisi4/work/hostelmoscow/index.html">Hostel Moscow</a>
+					<a target="_blank" href="https://dmitrisi4.github.io/dmitrisi4/work/hostelmoscow/index.html">Hostel Moscow</a>
 				</li>
 
 			</ul>
@@ -195,30 +185,11 @@
 		<div class="footer__wrapper">
 
 			<div class="footer__info">
-				<span class="footer__title">About us</span>
-				<p>Duis id eros ac eros cursus gravida a non magna.
-					Sed vitae nisl diam, non sollicitudin mi. In dui arcu,
-					rhoncus ac consequat eget, cursus sit amet risus.</p>
+				<span class="footer__title section-title">Contact me</span>
 				<p>E-mail: <a href="mailto:sichkardimitri@gmail.com">sichkardimitri@gmail.com</a></p>
 				<p>Telephone: <a href="tel:+380975493816">+380975493816</a></p>
-				<p>Skype: <a href="skype:front.dev@bk.ru?add">front.dev@bk.ru</a></p>
+				<p>Telegram: <a href="tg://resolve?domain=@kardsich">@kardsich</a></p>
 			</div>
-
-<!--			<div class="footer__form">-->
-<!--				<span class="footer__title">Feedback</span>-->
-<!--				<form>-->
-<!--					<div>-->
-<!--						<input type="text" placeholder="Name*">-->
-<!--						<input type="text" placeholder="Email*">-->
-<!--						<textarea name="" id="" placeholder="Message*"></textarea>-->
-<!--					</div>-->
-
-<!--					<div>-->
-<!--						<button>send</button>-->
-<!--					</div>-->
-<!--				</form>-->
-<!--			</div>-->
-
 
 		</div>
 	</div>
