--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="utf-8">
-	<title>Title</title>
-	<title>Title</title>
+	<title>dsichkar</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap" rel="stylesheet">
@@ -29,7 +28,7 @@
 
 					<ul class="header-content__links contact-links">
 							<li class="contact-links__item">
-								<a class="contact-links__link" href="tg://resolve?domain=@kardsich">
+								<a class="contact-links__link" href="https://t.me/kardsich">
 									<img class="contact-links__link-icon" src="../img/tg-icon.svg" alt="img">
 								</a>
 							</li>
