--- a/work/lemuria/app/index.html
+++ b/work/lemuria/app/index.html
@@ -43,7 +43,7 @@
 
 					<div class="nav-wrap">
 						<div class="nav-wrap__top">
-							<a href="#" class="logo">
+							<a href="/dsichkar/work/dent/index.html" class="logo">
 								<img src="img/logo-black.svg" alt="lemuria">
 							</a>
 							<button class="btn-burger">
