--- a/work/miband/ordering.html
+++ b/work/miband/ordering.html
@@ -33,7 +33,7 @@
 			<div class="container">
 				<div class="header__wrap">
 					<div class="logo">
-						<a class="logo__link" href="#">M<span>i</span>band</a>
+						<a class="logo__link" href="/dsichkar/work/miband/">M<span>i</span>band</a>
 					</div>
 
 					<p class="header__textelement">Федеральная сеть по продаже фитнес-браслетов</p>
@@ -64,13 +64,13 @@
 				
 				<div class="container">
 					<ul class="main-nav" id="main-nav">
-						<li><a class="main-nav__item" href="#">Главная</a></li>
-						<li><a class="main-nav__item" href="#">Каталог</a></li>
-						<li><a class="main-nav__item" href="#">О браслетах</a></li>
-						<li><a class="main-nav__item" href="#">Вопрос-ответ</a></li>
-						<li><a class="main-nav__item" href="#">Отзывы</a></li>
-						<li><a class="main-nav__item active" href="#">Доставка</a></li>
-						<li><a class="main-nav__item" href="#">Контакты</a></li>
+						<li><a class="main-nav__item" href="/dsichkar/work/miband/">Главная</a></li>
+						<li><a class="main-nav__item" href="/dsichkar/work/miband/catalog.html">Каталог</a></li>
+						<li><a class="main-nav__item" href="/dsichkar/work/miband/about-product.html">О браслетах</a></li>
+						<li><a class="main-nav__item" href="/dsichkar/work/miband/question.html">Вопрос-ответ</a></li>
+						<li><a class="main-nav__item" href="/dsichkar/work/miband/reviews.html">Отзывы</a></li>
+						<li><a class="main-nav__item active" href="/dsichkar/work/miband/ordering.html">Доставка</a></li>
+						<li><a class="main-nav__item" href="/dsichkar/work/miband/contacts.html">Контакты</a></li>
 					</ul>
 					<button class="open-menu">
 						<span></span>
@@ -88,9 +88,9 @@
 			<section class="ordering">
 				<div class="container">
 					<ul class="breadcrumbs">
-						<li><a href="#">Главная</a></li>
+						<li><a href="/dsichkar/work/miband/">Главная</a></li>
 						<span>-</span>
-						<li><a href="#">Каталог</a></li>
+						<li><a href="/dsichkar/work/miband/catalog.html">Каталог</a></li>
 						<span>-</span>
 						<li><a href="#">Оформление заказа</a></li>
 					</ul>
@@ -228,21 +228,21 @@
 			<div class="container">
 				<div class="footer__wrap">
 					<div class="logo">
-						<a class="logo__link" href="#">M<span>i</span>band</a>
+						<a class="logo__link" href="/dsichkar/work/miband/">M<span>i</span>band</a>
 						<p class="logo__info"><span>MiBand</span> - это маркет фитнес-браслетов для любых возрастов и на любой случай жизни.</p>
 					</div>
 					<div class="footer__inners">
 						<ul class="footer-nav">
-							<li><a class="footer-nav__item" href="#">Главная</a></li>
-							<li><a class="footer-nav__item" href="#">Каталог</a></li>
-							<li><a class="footer-nav__item" href="#">О браслетах</a></li>
-							<li><a class="footer-nav__item" href="#">Вопрос-ответ</a></li>
+							<li><a class="footer-nav__item" href="/dsichkar/work/miband/">Главная</a></li>
+							<li><a class="footer-nav__item" href="/dsichkar/work/miband/catalog.html">Каталог</a></li>
+							<li><a class="footer-nav__item" href="/dsichkar/work/miband/about-product.html">О браслетах</a></li>
+							<li><a class="footer-nav__item" href="/dsichkar/work/miband/question.html">Вопрос-ответ</a></li>
 						</ul>
 
 						<ul class="footer-nav">
-							<li><a class="footer-nav__item" href="#">Отзывы</a></li>
-							<li><a class="footer-nav__item active" href="#">Доставка</a></li>
-							<li><a class="footer-nav__item" href="#">Контакты</a></li>
+							<li><a class="footer-nav__item" href="/dsichkar/work/miband/reviews.html">Отзывы</a></li>
+							<li><a class="footer-nav__item active" href="/dsichkar/work/miband/ordering.html">Доставка</a></li>
+							<li><a class="footer-nav__item" href="/dsichkar/work/miband/contacts.html">Контакты</a></li>
 							<li><a class="footer-nav__item" href="#">Карта сайта</a></li>
 						</ul>
 
