--- a/work/nst/index.html
+++ b/work/nst/index.html
@@ -31,7 +31,7 @@
 <body>
 	<header class="header-main">
 		<div class="header-main__top">
-			<div class="header-main__logo"><a href="#"><img src="img/logo.png" alt="logo"></a></div>
+			<div class="header-main__logo"><a href="/dsichkar/work/moroshka/index.html"><img src="img/logo.png" alt="logo"></a></div>
 			<div class="mob-phone"><a href="#">8-804-333-07-17</a></div>
 			<div class="header-main__burger">
 				<button>
