--- a/work/Hochupodarit/card.html
+++ b/work/Hochupodarit/card.html
@@ -15,7 +15,7 @@
 	<header class="header">
 		<div class="container">
 			<!-- begin logo  -->
-			<a href="#" class="logo"><img src="assets/img/logo.png" alt="logo"></a>
+			<a href="/dsichkar/work/dent/index.html" class="logo"><img src="assets/img/logo.png" alt="logo"></a>
 			<!-- end logo -->
 
 			<!-- begin header-place  -->
