--- a/work/dent/reviews-list.html
+++ b/work/dent/reviews-list.html
@@ -28,7 +28,7 @@
 			<div class="container">
 				<div class="header-page__main-wrap">
 					<div class="header-page__top">
-						<a href="#" class="logo">
+						<a href="/dsichkar/work/dent/index.html" class="logo">
 							<img src="img/logo-icon.png" alt="logo" class="logo__image">
 							<span class="logo__text">Implant-info.ru
 							стоматология</span>
@@ -60,28 +60,28 @@
 						<nav class="main-nav">
 							<ul class="main-nav__list">
 								<li class="main-nav__item">
-									<a href="#" class="main-nav__link">УСЛУГИ</a>
+									<a href="/dsichkar/work/dent/service.html" class="main-nav__link">УСЛУГИ</a>
 								</li>
 								<li class="main-nav__item">
-									<a href="#" class="main-nav__link active">ДОКТОРА</a>
+									<a href="/dsichkar/work/dent/doctors-list.html" class="main-nav__link active">ДОКТОРА</a>
 								</li>
 								<li class="main-nav__item">
-									<a href="#" class="main-nav__link">КЛИНИКИ</a>
+									<a href="/dsichkar/work/dent/clinic.html" class="main-nav__link">КЛИНИКИ</a>
 								</li>
 								<li class="main-nav__item">
-									<a href="#" class="main-nav__link">ЦЕНЫ</a>
+									<a href="/dsichkar/work/dent/prices.html" class="main-nav__link">ЦЕНЫ</a>
 								</li>
 								<li class="main-nav__item">
-									<a href="#" class="main-nav__link">АКЦИИ</a>
+									<a href="/dsichkar/work/dent/shares.html" class="main-nav__link">АКЦИИ</a>
 								</li>
 								<li class="main-nav__item">
-									<a href="#" class="main-nav__link">ИНФОРМАЦИЯ</a>
+									<a href="/dsichkar/work/dent/info-inner.html" class="main-nav__link">ИНФОРМАЦИЯ</a>
 								</li>
 								<li class="main-nav__item">
-									<a href="#" class="main-nav__link">ВОПРОСЫ И ОТВЕТЫ</a>
+									<a href="/dsichkar/work/dent/questions-answers.html" class="main-nav__link">ВОПРОСЫ И ОТВЕТЫ</a>
 								</li>
 								<li class="main-nav__item">
-									<a href="#" class="main-nav__link">ОТЗЫВЫ</a>
+									<a href="/dsichkar/work/dent/reviews.html" class="main-nav__link">ОТЗЫВЫ</a>
 								</li>
 							</ul>
 						</nav>
