--- a/work/im/index.html
+++ b/work/im/index.html
@@ -51,7 +51,7 @@
 	<div class="top-line">
 		<div class="container">
 			<div class="top-line__left">
-				<a href="#" class="logo">
+				<a href="/dsichkar/work/dent/index.html" class="logo">
 					<img src="img/logo.png" alt="logo">
 					<span class="logo__desc"><span>Онлайн <i>магазин</i></span></span>
 				</a>
