--- a/work/miband/reviews.html
+++ b/work/miband/reviews.html
@@ -33,7 +33,7 @@
 			<div class="container">
 				<div class="header__wrap">
 					<div class="logo">
-						<a class="logo__link" href="#">M<span>i</span>band</a>
+						<a class="logo__link" href="/dsichkar/work/miband/">M<span>i</span>band</a>
 					</div>
 
 					<p class="header__textelement">Федеральная сеть по продаже фитнес-браслетов</p>
@@ -64,13 +64,13 @@
 				
 				<div class="container">
 					<ul class="main-nav" id="main-nav">
-						<li><a class="main-nav__item" href="#">Главная</a></li>
-						<li><a class="main-nav__item" href="#">Каталог</a></li>
-						<li><a class="main-nav__item active" href="#">О браслетах</a></li>
-						<li><a class="main-nav__item" href="#">Вопрос-ответ</a></li>
-						<li><a class="main-nav__item" href="#">Отзывы</a></li>
-						<li><a class="main-nav__item" href="#">Доставка</a></li>
-						<li><a class="main-nav__item" href="#">Контакты</a></li>
+						<li><a class="main-nav__item" href="/dsichkar/work/miband/">Главная</a></li>
+						<li><a class="main-nav__item" href="/dsichkar/work/miband/catalog.html">Каталог</a></li>
+						<li><a class="main-nav__item active" href="/dsichkar/work/miband/about-product.html">О браслетах</a></li>
+						<li><a class="main-nav__item" href="/dsichkar/work/miband/question.html">Вопрос-ответ</a></li>
+						<li><a class="main-nav__item" href="/dsichkar/work/miband/reviews.html">Отзывы</a></li>
+						<li><a class="main-nav__item" href="/dsichkar/work/miband/ordering.html">Доставка</a></li>
+						<li><a class="main-nav__item" href="/dsichkar/work/miband/contacts.html">Контакты</a></li>
 					</ul>
 					<button class="open-menu">
 						<span></span>
@@ -89,15 +89,15 @@
 			<section class="reviews">
 				<div class="container">
 					<ul class="breadcrumbs">
-						<li><a href="#">Главная</a></li>
+						<li><a href="/dsichkar/work/miband/">Главная</a></li>
 						<span>-</span>
-						<li><a href="#">Отзывы</a></li>
+						<li><a href="/dsichkar/work/miband/reviews.html">Отзывы</a></li>
 					</ul>
 					<span class="page-title">Отзывы</span>
 					<div class="reviews__wrap">
 
 						<div class="reviews-item">
-							<a href="#">
+							<a href="/dsichkar/work/miband/reviews-open.html">
 								<div class="reviews-item__image">
 									<img src="img/rev-2.jpg" alt="image">
 								</div>
@@ -110,7 +110,7 @@
 						</div>
 
 						<div class="reviews-item">
-							<a href="#">
+							<a href="/dsichkar/work/miband/reviews-open.html">
 								<div class="reviews-item__image">
 									<img src="img/rev-2.jpg" alt="image">
 								</div>
@@ -123,7 +123,7 @@
 						</div>
 
 						<div class="reviews-item">
-							<a href="#">
+							<a href="/dsichkar/work/miband/reviews-open.html">
 								<div class="reviews-item__image">
 									<img src="img/rev-2.jpg" alt="image">
 								</div>
@@ -136,7 +136,7 @@
 						</div>
 
 						<div class="reviews-item">
-							<a href="#">
+							<a href="/dsichkar/work/miband/reviews-open.html">
 								<div class="reviews-item__image">
 									<img src="img/rev-2.jpg" alt="image">
 								</div>
@@ -149,7 +149,7 @@
 						</div>
 
 						<div class="reviews-item">
-							<a href="#">
+							<a href="/dsichkar/work/miband/reviews-open.html">
 								<div class="reviews-item__image">
 									<img src="img/rev-2.jpg" alt="image">
 								</div>
@@ -162,7 +162,7 @@
 						</div>
 
 						<div class="reviews-item">
-							<a href="#">
+							<a href="/dsichkar/work/miband/reviews-open.html">
 								<div class="reviews-item__image">
 									<img src="img/rev-2.jpg" alt="image">
 								</div>
@@ -188,21 +188,21 @@
 			<div class="container">
 				<div class="footer__wrap">
 					<div class="logo">
-						<a class="logo__link" href="#">M<span>i</span>band</a>
+						<a class="logo__link" href="/dsichkar/work/miband/">M<span>i</span>band</a>
 						<p class="logo__info"><span>MiBand</span> - это маркет фитнес-браслетов для любых возрастов и на любой случай жизни.</p>
 					</div>
 					<div class="footer__inners">
 						<ul class="footer-nav">
-							<li><a class="footer-nav__item active" href="#">Главная</a></li>
-							<li><a class="footer-nav__item" href="#">Каталог</a></li>
-							<li><a class="footer-nav__item" href="#">О браслетах</a></li>
-							<li><a class="footer-nav__item" href="#">Вопрос-ответ</a></li>
+							<li><a class="footer-nav__item active" href="/dsichkar/work/miband/">Главная</a></li>
+							<li><a class="footer-nav__item" href="/dsichkar/work/miband/catalog.html">Каталог</a></li>
+							<li><a class="footer-nav__item" href="/dsichkar/work/miband/about-product.html">О браслетах</a></li>
+							<li><a class="footer-nav__item" href="/dsichkar/work/miband/question.html">Вопрос-ответ</a></li>
 						</ul>
 
 						<ul class="footer-nav">
-							<li><a class="footer-nav__item" href="#">Отзывы</a></li>
-							<li><a class="footer-nav__item" href="#">Доставка</a></li>
-							<li><a class="footer-nav__item" href="#">Контакты</a></li>
+							<li><a class="footer-nav__item" href="/dsichkar/work/miband/reviews.html">Отзывы</a></li>
+							<li><a class="footer-nav__item" href="/dsichkar/work/miband/ordering.html">Доставка</a></li>
+							<li><a class="footer-nav__item" href="/dsichkar/work/miband/contacts.html">Контакты</a></li>
 							<li><a class="footer-nav__item" href="#">Карта сайта</a></li>
 						</ul>
 
