--- a/work/moroshka/index.html
+++ b/work/moroshka/index.html
@@ -37,30 +37,30 @@
 	<header class="header">
 		<div class="container">
 			<div class="header__logo">
-				<a href="#"><img src="img/logo.png" alt="logo"></a>
+				<a href="/dsichkar/work/moroshka/index.html"><img src="img/logo.png" alt="logo"></a>
 			</div>
 			<div class="header__nav">
 				<ul>
-					<li><a href="#">Доставка </a>
+					<li><a href="/dsichkar/work/moroshka/delivery.html">Доставка</a>
 						<ul class="under-menu">
 							<li><a href="#">Меню</a></li>
-							<li><a href="#">Концепция</a></li>
-							<li><a href="#">Правила ресторана</a></li>
-							<li><a href="#">Новости и акции</a></li>
-							<li><a href="#">Обратная связь</a></li>
-							<li><a href="#">Вакансии</a></li>
-							<li><a href="#">Контакты</a></li>
+							<li><a href="/dsichkar/work/moroshka/restoran.html">Концепция</a></li>
+							<li><a href="/dsichkar/work/moroshka/rules.html">Правила ресторана</a></li>
+							<li><a href="/dsichkar/work/moroshka/news.html">Новости и акции</a></li>
+							<li><a href="/dsichkar/work/moroshka/feedback.html">Обратная связь</a></li>
+							<li><a href="/dsichkar/work/moroshka/vacansy.html">Вакансии</a></li>
+							<li><a href="/dsichkar/work/moroshka/contacts.html">Контакты</a></li>
 						</ul>
 					</li>
-					<li><a href="#">Ресторан</a>
+					<li><a href="/dsichkar/work/moroshka/restoran.html">Ресторан</a>
 						<ul class="under-menu">
 							<li><a href="#">Меню</a></li>
 							<li><a href="#">Условия доставки</a></li>
 						</ul>
 					</li>
 				</ul>
-				<a href="#"><img src="img/cab-ico.png" alt="cab"></a>
-				<a href="#"><span>25</span><img src="img/cart-ico.png" alt="cab"><b>5 460Р</b></a>
+				<a href="/dsichkar/work/moroshka/basket-checkout.html"><img src="img/cab-ico.png" alt="cab"></a>
+				<a href="/dsichkar/work/moroshka/basket.html"><span>25</span><img src="img/cart-ico.png" alt="cab"><b>5 460Р</b></a>
 			</div>
 			<div class="header__burger">
 				<button>
