--- a/work/nst/card-product.html
+++ b/work/nst/card-product.html
@@ -51,7 +51,7 @@
 		<div class="container">
 			<div class="header-page__middle">				
 				<div class="header-page__logo">
-					<a href="#"><img src="img/logo.png" alt="logo"></a>
+					<a href="/dsichkar/work/moroshka/index.html"><img src="img/logo.png" alt="logo"></a>
 					<p>Всё для пенополиуретана (ППУ) <br>и гидроизоляции "жидкая резина" <br>Сибирь, Дальний восток </p>
 				</div>
 				<div class="header-page__contacts">
