--- a/work/po/app/delivery.html
+++ b/work/po/app/delivery.html
@@ -75,7 +75,7 @@
 				</div>
 				<div class="col-lg-3 col-lg-pull-9">
 					<div class="header__logo">
-						<a href="#"><img src="img/logo.png" alt="logo"></a>
+						<a href="/dsichkar/work/moroshka/index.html"><img src="img/logo.png" alt="logo"></a>
 					</div>
 				</div>
 			</div>
