add target blank on link

--- a/src/index.html
+++ b/src/index.html
@@ -71,10 +71,10 @@
 									<a class="framework-list__link" target="_blank" href="http://si4kard-nif-font.s3-website.eu-north-1.amazonaws.com/">Landing NIF</a>
 								</li>
 								<li>
-									<a class="framework-list__link" href="http://si4kard-nif-cabinet-front.s3-website.eu-north-1.amazonaws.com/">Admin area</a>
+									<a class="framework-list__link" target="_blank" href="http://si4kard-nif-cabinet-front.s3-website.eu-north-1.amazonaws.com/">Admin area</a>
 								</li>
 								<li>
-									<a  class="framework-list__link" href="https://github.com/dmitrisi4/nif/tree/master">github</a>
+									<a  class="framework-list__link" target="_blank" href="https://github.com/dmitrisi4/nif/tree/master">github</a>
 								</li>
 							</ul>
 						</li>
